Support "toc-title" in the beamer template.
It is a bit awkward to have a title for every frame, but not for the one
that holds the table of contents. Allow users to specify a title if they
wish.

--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -361,6 +361,9 @@ $endfor$
 $if(toc)$
 $if(beamer)$
 \begin{frame}
+$if(toc-title)$
+\frametitle{$toc-title$}
+$endif$
 \tableofcontents[hideallsubsections]
 \end{frame}
 $else$
