--- a/test/command/4781.md
+++ b/test/command/4781.md
@@ -7,7 +7,7 @@ Markdown parsed *here*
 *But not here*
 ^D
 [Para [Str "Markdown",Space,Str "parsed",Space,Emph [Str "here"]]
-,RawBlock (Format "latex") "\\include{command/bar}"
+,RawBlock (Format "tex") "\\include{command/bar}"
 ,Para [Emph [Str "But",Space,Str "not",Space,Str "here"]]]
 ```
 
