Add support for $toc-title$ to LaTeX (and PDF).

--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -360,6 +360,9 @@ $include-before$
 
 $endfor$
 $if(toc)$
+$if(toc-title)$
+\renewcommand*\contentsname{$toc-title$}
+$endif$
 $if(beamer)$
 \begin{frame}
 $if(toc-title)$
