--- a/man/pandoc.1
+++ b/man/pandoc.1
@@ -1,5 +1,5 @@
 .\"t
-.TH PANDOC 1 "September 16, 2018" "pandoc 2.3"
+.TH PANDOC 1 "September 27, 2018" "pandoc 2.3.1"
 .SH NAME
 pandoc - general markup converter
 .SH SYNOPSIS
@@ -5786,8 +5786,8 @@ iBooks\-specific metadata, with the following fields:
 .RE
 .SS The \f[C]epub:type\f[] attribute
 .PP
-You can mark up the header that corresponds to an EPUB chapter using the
-\f[C]epub:type\f[] attribute.
+For \f[C]epub3\f[] output, you can mark up the header that corresponds
+to an EPUB chapter using the \f[C]epub:type\f[] attribute.
 For example, to set the attribute to the value \f[C]prologue\f[], use
 this markdown:
 .IP
