Org reader: fix behavior for successive calls of `#+EXCLUDE_TAGS`.
Calling `#+EXCLUDE_TAGS` multiple times should preserve the status of
the previously declared tags.

--- a/test/command/4284.md
+++ b/test/command/4284.md
@@ -22,6 +22,17 @@
 
 ```
 % pandoc -f org -t native
+#+EXCLUDE_TAGS: giraffe
+#+EXCLUDE_TAGS: hippo
+* This should not appear                                            :giraffe:
+* This should not appear                                              :hippo:
+* This should appear                                               :noexport:
+^D
+[Header 1 ("this-should-appear",[],[]) [Str "This",Space,Str "should",Space,Str "appear",Space,Span ("",["tag"],[("tag-name","noexport")]) [SmallCaps [Str "noexport"]]]]
+```
+
+```
+% pandoc -f org -t native
 #+EXCLUDE_TAGS:
 * NOEXPORT should appear if not specified in EXCLUDE_TAGS          :noexport:
 ^D
